--- a/petsbar/css/header.css
+++ b/petsbar/css/header.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     width: 100%;
     background: linear-gradient(180deg, #FF8900 0%, rgba(255, 166, 64, 0.7) 100%);
+    height: 200px;
 }
 
 .lable {
@@ -30,12 +31,14 @@
     align-items: center;
     letter-spacing: 0.215em;
     color: #000000;
+    margin: 0;
+    margin-top: -10px;
 }
 
 .menuhead {
     margin: auto;
-    margin-right: 0;
     display: flex;
+    margin-top: 40px;
 }
 
 .menuhead a {
@@ -59,7 +62,10 @@
 }
 .tel {
     display: flex;
-
+    right: 0;
+    margin: auto;
+    margin-left: 0;
+    margin-top: 40px;
 }
 .tel a {
     font-family: "Ubuntu";
