--- a/petsbar/css/content.css
+++ b/petsbar/css/content.css
@@ -15,6 +15,18 @@
 
 .cart img {
     width: 120px;
-    height: 120px;
-    padding-top: 10px;
+    padding-top: 20px;
+}
+.cart p {
+    font-family: "Ubuntu";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 13px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.05em;
+
+    color: #000000;
 }
