--- a/lending/css/flipbox.css
+++ b/lending/css/flipbox.css
@@ -1,33 +1,73 @@
  
-  .flip-box-inner {
+.flip-box-inner {
 
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-box:hover .flip-box-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-box-front, .flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-  
-  .flip-box-front {
-    border-radius: 5px;
-    background: linear-gradient(180deg, rgba(0, 99, 125, 0.49) 0%, rgba(5, 32, 101, 0) 100%);
-    color: black;
-  }
-  
-  .flip-box-back {
-    border-radius: 5px;
-    background: linear-gradient(180deg, rgba(0, 99, 125, 0.49) 0%, rgba(5, 32, 101, 0) 100%);
-    color: rgb(5, 0, 0);
-    transform: rotateY(180deg);
-  }
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 5px;
+  background: linear-gradient(180deg, rgba(0, 99, 125, 0.49) 0%, rgba(5, 32, 101, 0) 100%);
+  color: black;
+}
+
+.flip-box-back {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  background: #60afdd;;
+  color: rgb(5, 0, 0);
+  transform: rotateY(180deg);
+}
+.flip-box-front p {
+  margin: 10px 10px 10px 10px;
+  display: flex;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 27px;
+  text-align: center;
+  justify-content: center;
+  color: #000000;
+  text-transform: uppercase;
+}
+.flip-box-back p {
+  margin: 10px 10px 10px 10px;
+  display: flex;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 27px;
+  text-align: center;
+  justify-content: center;
+  color: #000000;
+  text-transform: uppercase;
+}
+.cartname {
+  display: flex;
+  justify-content: center;
+}
+.cartimgs {
+  display: flex;
+  justify-content: space-around;
+  align-content: space-around;
+}
