--- a/lending/css/content.css
+++ b/lending/css/content.css
@@ -1,5 +1,6 @@
 .conthaed {
     display: flex;
+    justify-content: space-evenly;
 }
 .conthaed h1 {
     font-family: "Oswald";
@@ -49,7 +50,22 @@
 .cart {
     width: 250px;
     height: 200px;
-    
     border-radius: 5px;
     margin: 10px 5px 10px 5px;
+}
+
+.hcont {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+    flex-wrap: nowrap;
+    margin-top: 10px;
+}
+
+.contact img {
+    width: 50px;
+    height: 50px;
 }
