--- a/lending/css/contact.css
+++ b/lending/css/contact.css
@@ -39,3 +39,9 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+@media screen and (max-width: 985px) {
+    .contact a {
+        font-size: 14px;
+    }
+}
