--- a/lending/css/content.css
+++ b/lending/css/content.css
@@ -1,36 +1,4 @@
-.conthaed {
-    display: flex;
-    justify-content: space-evenly;
-}
-.conthaed h1 {
-    font-family: "Oswald";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 35px;
-    line-height: 52px;
-    text-transform: uppercase;
-    padding-left: 15%;
-    color: #FAFBFD;
-    text-align: left;
-    display: flex;
-    height: 200px;
-    flex-direction: row;
-    align-items: center;
-}
-.conthaed p {
-    display: flex;
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 25px;
-    line-height: 23px;
-    text-align: right;
-    color: #FFFFFF;
-    filter: blur(2px);
-    justify-content: flex-end;
-    margin-bottom: 20px;
-    align-items: flex-end;
-}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -68,4 +36,20 @@
 .contact img {
     width: 50px;
     height: 50px;
+}
+
+@media screen and (max-width: 985px) {
+    .cart {
+        width: 250px;
+        height: 100px;
+        border-radius: 5px;
+        margin: 10px 5px 10px 5px;
+    }
+    .content {
+        align-items: flex-start;
+    }
+    .contact img {
+        width: 30px;
+        height: 30px;
+    }
 }
