--- a/lending/css/contact.css
+++ b/lending/css/contact.css
@@ -45,3 +45,14 @@
         font-size: 14px;
     }
 }
+.element-animationright {
+    /* Скрыть элемент в начальном состоянии */
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+.element-animationright.element-show {
+    opacity: 1;
+    transition: all 1s;
+    transform: translateX(0px);
+}
