--- a/hidroizolation/css/content.css
+++ b/hidroizolation/css/content.css
@@ -133,7 +133,7 @@
     flex-direction: column;
     align-items: center;
 }
-.pricecontent h2, .contactcontainer h2 {
+.pricecontent h2, .contact h2 {
     font-family: "Roboto";
     font-style: normal;
     font-weight: bold;
@@ -306,9 +306,40 @@
     width: 1082px;
     height: 578px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-between;
 }
 .mapcont {
     display: flex;
+    width: 45%;
+}
+.contabout {
+    width: 45%;
+    height: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.contabout h3 {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #000000;
+}
+.contabout p {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #000000;
 }
