--- a/hidroizolation/css/content.css
+++ b/hidroizolation/css/content.css
@@ -124,7 +124,7 @@
     width: 100%;
     height: 484px;
     position: absolute;
-    top: 1831px;
+    top: 1731px;
 }
 .pricecontent {
     margin: 0 auto 0 auto;
@@ -142,6 +142,7 @@
     display: flex;
     align-items: center;
     text-align: center;
+    margin-top: 20px;
 }
 .priceform {
     position: absolute;
@@ -238,7 +239,7 @@
     width: 100%;
     height: 1165px;
     position: absolute;
-    top: 2473px;
+    top: 2273px;
     background: #001241;
     display: flex;
     flex-direction: column;
@@ -297,7 +298,7 @@
     width: 100%;
     height: 578px;
     position: absolute;
-    top: 3638px;
+    top: 3438px;
     display: flex;
     flex-direction: column;
     align-items: center;
