--- a/hidroizolation/css/footer.css
+++ b/hidroizolation/css/footer.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 336px;
-    top: 4216px;
+    top: 4016px;
     background: #001241;
     display: flex;
     flex-direction: column;
@@ -13,8 +13,9 @@
     height: 336px;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
+    align-content: space-around;
 }
 .footer h3 {
     font-family: "Roboto";
@@ -31,4 +32,38 @@
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
+}
+.footercont h3{
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.footercont img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+.footercont p, a {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-bottom: 15px;
+}
+.footmenu, .footserv, .footcomp, .footcontact {
+    height: 336px;
+    display: flex;
+    flex-direction: column;
+}
+.controw {
+    display: flex;
+    flex-direction: row;
 }
