--- a/hidroizolation/css/form.css
+++ b/hidroizolation/css/form.css
@@ -1,4 +1,5 @@
 .order {
+    display: none;
     position: fixed;
     bottom: 30px;
     right: 30px;
@@ -7,6 +8,8 @@
     background: #001241;
     border-radius: 20px;
     text-align: left;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
 }
 .order form {
     width: 100%;
