--- a/hidroizolation/css/header.css
+++ b/hidroizolation/css/header.css
@@ -74,7 +74,7 @@
     line-height: 110%;
     color: #FFFFFF;
 }
-.headercontainer a {
+.headercontainer button {
     position: absolute;
     width: 274px;
     height: 56.05px;
