--- a/hidroizolation/css/form.css
+++ b/hidroizolation/css/form.css
@@ -1,33 +1,28 @@
 .order {
-    display: none;
     position: fixed;
     bottom: 30px;
     right: 30px;
     width: 370px;
-    height: 500px;
+    height: 400px;
     background: #001241;
     border-radius: 20px;
     text-align: left;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
+    right: -370px;
 }
+.wrooom {
+    right: 20px;
+    transition: right 1s ease-out 0.5s;
+  }
 .order form {
     width: 100%;
-    height: 450px;
+    height: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
 }
 
-.bigf {
-    width: 290px;
-    height: 100px;
-    display: flex;
-    background: #FFFFFF;
-    border: 2px solid #001241;
-    border-radius: 10px;
-}
+
 .bigf::placeholder, .smf::placeholder {
     font-family: "Roboto";
 font-style: normal;
@@ -47,6 +42,11 @@ padding-left: 10px;
     border: 2px solid #001241;
     box-sizing: border-box;
     border-radius: 10px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 5px;
 }
 form h3 {
     font-family: Roboto;
@@ -59,20 +59,29 @@ form h3 {
 }
 form button {
     width: 295px;
-height: 45px;
-
-
-background: #F4A407;
-border-radius: 10px;
-font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 19px;
-
-text-transform: uppercase;
-
-color: #001241;
+    height: 45px;
+    background: #F4A407;
+    border-radius: 10px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: #001241;
+}
+.bigf {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 5px;
+    width: 280px;
+    height: 100px;
+    display: flex;
+    background: #FFFFFF;
+    border: 2px solid #001241;
+    border-radius: 10px;
 }
 
 .close {
@@ -84,10 +93,17 @@ color: #001241;
     width: 38px;
     height: 38px;
 }
+
 .close:hover,
 .close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
 
+}
+button, .ourworkscont a {
+    transition: 0.5s linear;
+}
+button:hover, .ourworkscont a:hover {
+    background: #1381e9; /* Цвет фона */
 }
