--- a/hidroizolation/css/content.css
+++ b/hidroizolation/css/content.css
@@ -9,7 +9,6 @@
     width: 1079px;
 }
 .servisecont h2 {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: bold;
     font-size: 39.3158px;
@@ -27,7 +26,6 @@
 }
 .serviselist h3 {
     left: 72px;
-    font-family: "Roboto";
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -44,7 +42,6 @@
     margin-right: 15px;
 }
 .servitem p {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: normal;
     font-size: 22px;
@@ -71,7 +68,6 @@
 }
 
 .advantagecont h2, .ourworkscont h2 {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: bold;
     font-size: 35px;
@@ -99,7 +95,6 @@
 }
 .advcart h3 {
     display: flex;
-    font-family: "Roboto";
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -107,19 +102,7 @@
     display: flex;
     color: #FFFFFF;
 }
-.advcart a {
-    display: flex;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 15.233px;
-    line-height: 18px;
-    text-decoration-line: underline;
-    color: #FFFFFF;
-}
-.advcart a:hover {
-    font-size: 17px;
-}
+
 .price {
     width: 100%;
     height: 484px;
@@ -134,7 +117,6 @@
     align-items: center;
 }
 .pricecontent h2, .contact h2 {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
@@ -161,17 +143,14 @@
     width: 438px;
 }
 .blockprice p {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
-    /* identical to box height */
     margin: 0 0 20px 0;
     display: flex;
     align-items: center;
     text-align: center;
-
     color: #FFFFFF;
 }
 .blockprice select {
@@ -190,7 +169,6 @@
     display: flex;
     align-items: center;
     text-align: center;
-
     color: #001241;
 }
 
@@ -227,9 +205,8 @@
 }
 .blockprice input::-webkit-outer-spin-button,
 .blockprice input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    margin: 0; 
 }
 .cost {
     background: white
@@ -261,7 +238,6 @@
 .worksa p, .worksb p {
     width: 675px;
     height: 255px;
-    font-family: "Roboto";
     font-style: normal;
     font-weight: normal;
     font-size: 25.8462px;
@@ -274,7 +250,6 @@
     height: 255px;
 }
 .ourworkscont a {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: 500;
     font-size: 23.814px;
@@ -323,7 +298,6 @@
     justify-content: space-between;
 }
 .contabout h3 {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -334,7 +308,6 @@
     color: #000000;
 }
 .contabout p {
-    font-family: "Roboto";
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
