--- a/hidroizolation/css/header.css
+++ b/hidroizolation/css/header.css
@@ -1,6 +1,10 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: "Roboto";
+}
+body {
+    width: 100%;
 }
 .header {
    width: 100%;
@@ -26,7 +30,7 @@
 }
 .navbar a {
     text-decoration: none;
-    font-family: "Roboto";
+
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -48,12 +52,11 @@
     margin: 0 auto 0 auto;
     width: 1079px;
     height: 732px;
-
 }
 .headercontainer h1 {
     position: absolute;
     top: 114px;
-    font-family: "Roboto";
+
     font-style: normal;
     font-weight: bold;
     font-size: 42px;
@@ -67,7 +70,7 @@
     width: 491px;
     height: 130px;
     top: 236px;
-    font-family: Roboto;
+
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -86,7 +89,7 @@
     align-items: center;
     justify-content: space-around;
     text-decoration: none;
-    font-family: Roboto;
+
     font-style: normal;
     font-weight: 500;
     font-size: 19.9273px;
@@ -99,4 +102,27 @@
     height: 599.83px;
     top: 72px;
     left: 500px;
+}
+@media screen and (max-width: 769px) {
+    .header {
+        background-color: rgb(165, 29, 29);
+    }
+    .navbarwidth {
+        width: 100%;
+        height: 56px;
+        position: absolute;
+        top: 5px;
+        background-color: white;
+    }
+    .navbar {
+        margin: 0 auto 0 auto;
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px;
+        height: 56px;
+    }
 }
