--- a/hidroizolation/css/header.css
+++ b/hidroizolation/css/header.css
@@ -5,10 +5,12 @@
 }
 body {
     width: 100%;
+    display: flex;
 }
 .header {
    width: 100%;
    height: 200px;
+   display: flex;
 }
 .navbarwidth {
     width: 100%;
@@ -16,6 +18,7 @@ body {
     position: absolute;
     top: 5px;
     background-color: white;
+    display: flex;
 }
 .navbar {
     margin: 0 auto 0 auto;
@@ -104,25 +107,36 @@ body {
     left: 500px;
 }
 @media screen and (max-width: 769px) {
-    .header {
-        background-color: rgb(165, 29, 29);
-    }
-    .navbarwidth {
-        width: 100%;
-        height: 56px;
-        position: absolute;
-        top: 5px;
-        background-color: white;
-    }
     .navbar {
-        margin: 0 auto 0 auto;
-        background-color: rgb(255, 255, 255);
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0px;
-        height: 56px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
+    .headercontainer h1 {
+        top: 20px;
+        font-size: 38px;
+        margin-left: 20px;
+    }
+    .headercontainer p {
+        width: 491px;
+        top: 85px;
+        font-size: 20px;
+        margin-left: 20px;
+    }
+    .headercontainer button {
+        top: 220px;
+        margin-left: 80px;
+    }
+    .headercontainer img {
+        width: 240.45px;
+        height: 289.83px;
+        top: 10px;
+        left: 520px;
+    }
+    .headercontainer {
+        height: 320px;
+    }
+    .headcontent {
+        height: 320px;
+    }
+  
 }
