--- a/hidroizolation/css/header.css
+++ b/hidroizolation/css/header.css
@@ -59,21 +59,18 @@ body {
 .headercontainer h1 {
     position: absolute;
     top: 114px;
-
     font-style: normal;
     font-weight: bold;
     font-size: 42px;
     line-height: 49px;
     letter-spacing: 0.02em;
-
     color: #FFFFFF;
 }
 .headercontainer p {
     position: absolute;
-    width: 491px;
+    width: 30%;
     height: 130px;
     top: 236px;
-
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -92,18 +89,18 @@ body {
     align-items: center;
     justify-content: space-around;
     text-decoration: none;
-
     font-style: normal;
     font-weight: 500;
     font-size: 19.9273px;
     line-height: 23px;
     color: #001241;
+    margin-left: auto;
+    margin-right: auto;
 }
 .headercontainer img {
     margin-top: 10px;
-    margin-right: 10px;
-    width: 501.45px;
-    height: 599.83px;
+    margin-right: 0px;
+    width: 40%;
     top: 72px;
     
 }
@@ -114,13 +111,13 @@ body {
     }
     .headercontainer h1 {
         top: 20px;
-        font-size: 38px;
+        font-size: 32px;
         margin-left: 20px;
     }
     .headercontainer p {
-        width: 491px;
+        width: 60%;
         top: 85px;
-        font-size: 20px;
+        font-size: 18px;
         margin-left: 20px;
     }
     .headercontainer button {
@@ -128,10 +125,8 @@ body {
         margin-left: 80px;
     }
     .headercontainer img {
-        width: 240.45px;
-        height: 289.83px;
-        top: 10px;
-        left: 520px;
+        width: 30%;
+        bottom: 10px;
     }
     .headercontainer {
         height: 320px;
@@ -142,28 +137,44 @@ body {
     }
   
 }
-@media screen and (max-width : 420px) {
-    .headercontainer h1 {
-        top: 10px;
-        font-size: 28px;
-        margin-left: 20px;
-        line-height: 3vh;
+@media screen and (max-width : 425px) {
+    .header {
+       width: 100%;
+       height: 200px;
+       display: flex;
     }
-    .headercontainer img {
-        width: 144px;
-        height: 166px;
-        top: 15px;
-        left: 260px;
+    .navbarwidth {
+        display: none;
     }
-    .headercontainer p {
-        width: 220px;
-        top: 90px;
-        font-size: 15px;
-        margin-left: 20px;
+    .headcontent {
+        width: 100%;
+        top: 0px;
+        height: 290px;
+        position: static;
     }
     .headercontainer {
-
+        margin: 0 auto 0 auto;
         width: 100%;
+        text-align: right;
     }
+    .headercontainer h1 {
+        top: 5px;
+        font-size: 18px;
+    }
+    .headercontainer p {
+        width: 40%;
+        top: 50px;
+        font-size: 14px;
 
+    }
+    .headercontainer button {
+        top: 225px;
+        margin-left: 20px;
+    }
+    .headercontainer img {
+        margin-top: 10px;
+        margin-right: 0px;
+        width: 40%;
+        top: 72px;
+    }
 }
