--- a/hidroizolation/css/header.css
+++ b/hidroizolation/css/header.css
@@ -6,17 +6,16 @@
 body {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .header {
-   width: 100%;
-   height: 200px;
-   display: flex;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .navbarwidth {
     width: 100%;
-    height: 56px;
-    position: absolute;
-    top: 5px;
     background-color: white;
     display: flex;
 }
@@ -29,7 +28,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px;
-    height: 56px;
 }
 .navbar a {
     text-decoration: none;
@@ -45,20 +43,17 @@ body {
 }
 .headcontent {
     width: 100%;
-    height: 732px;
-    top: 56px;
     background: #04204D;
-    position: absolute;
+
 }
 .headercontainer {
     margin: 0 auto 0 auto;
     width: 1079px;
-    height: 732px;
     text-align: right;
 }
 .headercontainer h1 {
-    position: absolute;
-    top: 114px;
+
+
     font-style: normal;
     font-weight: bold;
     font-size: 42px;
@@ -67,10 +62,8 @@ body {
     color: #FFFFFF;
 }
 .headercontainer p {
-    position: absolute;
+
     width: 30%;
-    height: 130px;
-    top: 236px;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -78,10 +71,10 @@ body {
     color: #FFFFFF;
 }
 .headercontainer button {
-    position: absolute;
+
     width: 274px;
     height: 56.05px;
-    top: 439px;
+
     background: #F4A407;
     border-radius: 12.4545px;
     display: flex;
@@ -101,7 +94,7 @@ body {
     margin-top: 10px;
     margin-right: 0px;
     width: 40%;
-    top: 72px;
+
     
 }
 @media screen and (max-width: 769px) {
@@ -110,18 +103,18 @@ body {
         margin-right: 20px;
     }
     .headercontainer h1 {
-        top: 20px;
+
         font-size: 32px;
         margin-left: 20px;
     }
     .headercontainer p {
         width: 60%;
-        top: 85px;
+
         font-size: 18px;
         margin-left: 20px;
     }
     .headercontainer button {
-        top: 220px;
+
         margin-left: 80px;
     }
     .headercontainer img {
@@ -158,7 +151,7 @@ body {
         text-align: right;
     }
     .headercontainer h1 {
-        top: 5px;
+
         font-size: 18px;
     }
     .headercontainer p {
@@ -168,13 +161,13 @@ body {
 
     }
     .headercontainer button {
-        top: 225px;
+
         margin-left: 20px;
     }
     .headercontainer img {
         margin-top: 10px;
         margin-right: 0px;
         width: 40%;
-        top: 72px;
+
     }
 }
