--- a/hidroizolation/css/header.css
+++ b/hidroizolation/css/header.css
@@ -44,16 +44,20 @@ body {
 .headcontent {
     width: 100%;
     background: #04204D;
-
+    height: 730px;
 }
 .headercontainer {
     margin: 0 auto 0 auto;
     width: 1079px;
-    text-align: right;
+    text-align: left;
+    position: relative;
+    height: 730px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
 }
 .headercontainer h1 {
-
-
     font-style: normal;
     font-weight: bold;
     font-size: 42px;
@@ -71,10 +75,8 @@ body {
     color: #FFFFFF;
 }
 .headercontainer button {
-
     width: 274px;
     height: 56.05px;
-
     background: #F4A407;
     border-radius: 12.4545px;
     display: flex;
@@ -87,13 +89,13 @@ body {
     font-size: 19.9273px;
     line-height: 23px;
     color: #001241;
-    margin-left: auto;
-    margin-right: auto;
 }
 .headercontainer img {
-    margin-top: 10px;
-    margin-right: 0px;
+    top: 10px;
+    right: 0px;
     width: 40%;
+    position: absolute;
+    z-index: 2;
 
     
 }
